@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 32;
-# define VERSION_BUILD_NO 32
-char	version_build_date[] = "Mon Aug 29 20:34:22 2011";
+int	version_build_no = 34;
+# define VERSION_BUILD_NO 34
+char	version_build_date[] = "Tue Aug 30 22:49:39 2011";
 
